--- a/index.html
+++ b/index.html
@@ -6,73 +6,120 @@
   </head>
   <body>
     <div class="container">
-      <div class="introduce">
-        <h1>Introduce myself</h1>
-        <img
-          src="IMG_2344.JPG"
-          alt="My Picture"
-          height="250"
-          width="300"
-          style="float: right"
-        />
-        <h2>이름: 장태준</h2>
-        <h2>직업: 학생</h2>
-        <h2>나이: 28</h2>
-      </div>
-      <div class="major">
-        <p style="color: darkblue; font-weight: 900">
-          I'm 26years old, living in Korea and I happend to know Progaming code
-          when I started to learn Computer Science in College.
-        </p>
-      </div>
-      <div class="hobby">
-        <h3>Some of tmy favorite things to do are:</h3>
-        <ul id="hobbies">
-          <li>"영화 보기"</li>
-          <li>"노래 감상"</li>
-          <li>"헬스"</li>
-          <li>"맛집 탐방"</li>
-          <li>"야구 관람"</li>
-          <li>"온라인 게임"</li>
-        </ul>
-        <p>
-          <b>
-            <i
-              >I'm not particularly good at anything, but I like to try this and
-              that.</i
-            >
-          </b>
-        </p>
-        <a href="https://velog.io/@taja0903" id="hover">블로그 링크</a>
-      </div>
-      <hr />
-      <section>
-        <blockquote>
+      <div class="contents">
+        <div class="introduce">
+          <p id="dynamic" class="lg-text"></p>
+          <img
+            src="IMG_2344.JPG"
+            alt="My Picture"
+            height="250"
+            width="300"
+            style="float: right"
+          />
+          <div class="tabs">
+            <div class="tab" data-tab-target="#tab1">
+              <p>tab1</p>
+            </div>
+            <div class="tab" data-tab-target="#tab2">
+              <p>tab2</p>
+            </div>
+            <div class="tab" data-tab-target="#tab3">
+              <p>tab3</p>
+            </div>
+          </div>
+          <!-- <div class="content">
+            <div id="tab1" data-tab-target="items active">
+              <h2>Tab1</h2>
+              <p>탭1에 들어갈 내용~</p>
+            </div>
+            <div id="tab2" data-tab-target="items">
+              <h2>Tab2</h2>
+              <p>탭2에 들어갈 내용~</p>
+            </div>
+            <div id="tab3" data-tab-target="items">
+              <h2>Tab3</h2>
+              <p>탭3에 들어갈 내용~</p>
+            </div>
+          </div> -->
+          <script src="index.js"></script>
+          <!-- <h2>이름: 장태준</h2>
+          <h2>직업: 학생</h2>
+          <h2>나이: 28</h2> -->
+        </div>
+
+        <script src="main.js"></script>
+        <div class="major">
+          <p class="first-parallel"></p>
+        </div>
+        <div class="major">
+          <p class="second-parallel"></p>
+        </div>
+
+        <script src="animation.js"></script>
+
+        <div class="hobby">
+          <h3>Some of tmy favorite things to do are:</h3>
+          <ul id="hobbies">
+            <li>"영화 보기"</li>
+            <li>"노래 감상"</li>
+            <li>"헬스"</li>
+            <li>"맛집 탐방"</li>
+            <li>"야구 관람"</li>
+            <li>"온라인 게임"</li>
+          </ul>
           <p>
-            <b>My history</b>: I graduated from a high school in Seoul in
-            2015.<br />
-            After that, I entered the university and studied for 2 years, but I
-            took a leave of absence several times becuase the department was not
-            suitable for my aptitude.<br />
-            Mean time, Korean adults had to serve in the military for 2 years,
-            so I worked hard in the military.<br />
-            After being discharged from the military, I studied English in Korea
-            for a year and left to Canada.
+            <b>
+              <i
+                >I'm not particularly good at anything, but I like to try this
+                and that.</i
+              >
+            </b>
           </p>
-          <p>
-            -
-            <cite>TaeJun Jang</cite>
-          </p>
-        </blockquote>
-      </section>
-      <input type="text" />
-      <button id="button">클릭</button>
-      <hr />
-      <footer>
-        <small>
-          <i> Copyright ⓒ TaeJun Chang (장태준) </i>
-        </small>
-      </footer>
+          <a href="https://velog.io/@taja0903" id="hover">블로그 링크</a>
+        </div>
+        <hr />
+        <section>
+          <blockquote>
+            <p>
+              <b>My history</b>: I graduated from a high school in Seoul in
+              2015.<br />
+              After that, I entered the university and studied for 2 years, but
+              I took a leave of absence several times becuase the department was
+              not suitable for my aptitude.<br />
+              Mean time, Korean adults had to serve in the military for 2 years,
+              so I worked hard in the military.<br />
+              After being discharged from the military, I studied English in
+              Korea for a year and left to Canada.
+            </p>
+            <p>
+              -
+              <cite>TaeJun Jang</cite>
+            </p>
+          </blockquote>
+        </section>
+        <div class="event">
+          <span>방문자 클릭: 0</span>
+          <button id="btn">클릭</button>
+          <button onclick="alert('그만 보기')">그만 보기</button>
+        </div>
+        <script src="alert.js"></script>
+        <button id="open">Open Modal</button>
+        <div class="modal hidden">
+          <div class="modal_overlay"></div>
+          <div class="modal_content">
+            <h1>I'm a modal</h1>
+            <button>❌</button>
+          </div>
+        </div>
+        <script src="modal.js"></script>
+
+        <hr />
+        <footer>
+          <small>
+            <i> Copyright ⓒ TaeJun Chang (장태준) </i>
+          </small>
+        </footer>
+      </div>
     </div>
   </body>
 </html>
